--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<link rel="stylesheet" href="css/templatemo-style.css">
 
 	</head>
-	<body>
+	<body>        
 		<!-- start preloader -->
 		<div class="preloader">
 			<div class="sk-spinner sk-spinner-rotating-plane"></div>
@@ -40,13 +40,14 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">CloudTrail Viewer</a>
+					<a id="homepage" href="homepage" class="navbar-brand">CloudTrail Viewer</a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right text-uppercase">
 						<li><a href="#home">Home</a></li>
 						<li><a href="#feature">Features</a></li>
 						<li><a href="#divider">Get</a></li>
+                        <li><a id="developer" href="developer.html">Developer</a></li>
 					</ul>
 				</div>
 			</div>
@@ -127,12 +128,12 @@
 					<div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
 						<i class="fa fa-download"></i>
 						<h3 class="text-uppercase">DOWNLOAD</h3>
-						<p>Binaries can be downloaded from the CloudTrail Viewer GitHub <a href="https://github.com/githublemming/CloudTrailViewer/releases/latest">release</a> page</p>
+						<p>Binaries can be downloaded from the CloudTrail Viewer GitHub <a href="https://github.com/githublemming/CloudTrailViewer/releases/latest" target="_blank">release</a> page</p>
 					</div>
 					<div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
 						<i class="fa fa-copy"></i>
 						<h3 class="text-uppercase">CLONE</h3>
-						<p>CloudTrail Viewer is Open Source and you can freely download the source from <a href="https://github.com/githublemming/CloudTrailViewer">GitHub</a>.</p>
+						<p>CloudTrail Viewer is Open Source and you can freely download the source from <a href="https://github.com/githublemming/CloudTrailViewer" target="_blank">GitHub</a>.</p>
 					</div>
 					<div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
 						<i class="fa fa-code-fork"></i>
