Added more pages

--- a/developer.html
+++ b/developer.html
@@ -6,7 +6,7 @@
         http://www.templatemo.com/preview/templatemo_446_boxer
         -->
         <meta charset="utf-8">
-        <title>CloudTrail Viewer</title>
+        <title>CloudTrail Viewer :: Development</title>
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="">
