--- a/index.html
+++ b/index.html
@@ -70,6 +70,25 @@
 			</div>
 		</section>
 		<!-- end home -->
+		
+		<!-- start divider -->
+		<section id="divider">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 templatemo-box" data-wow-delay="0.3s">
+						<i class="fa fa-folder-open"></i>
+						<h3 class="text-uppercase">Local Files</h3>
+						<p>Load CloudTrail Event files from your local file system.</p>
+					</div>
+					<div class="col-md-6 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
+						<i class="fa fa-cloud-download"></i>
+						<h3 class="text-uppercase">S3 Files</h3>
+						<p>Load CloudTrail Event files from an S3 bucket.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- end divider -->
 
 		<!-- start feature -->
 		<section id="feature">
@@ -80,6 +99,7 @@
 						<p>The Simple Table View shows all the Events that have been loaded into the system order by time in ascending order.</p>
                         <p>It provides a Side Bar that shows the raw Event JSON of any selected event, as well as a tree view of the Event.</p>
                         <p>The Side Bar also provides a customisable chart where the top X loaded events can be viewed in either a Pie or Bar chart.</p>
+                        <p>Find out more about the <a href="tableview.html">Table View</a></p>
 					</div>
 					<div class="col-md-6 wow fadeInRight" data-wow-delay="0.6s">
 						<img src="images/table-view.png" class="img-responsive" alt="feature img">
@@ -100,6 +120,7 @@
 						<h2 class="text-uppercase">Service Overview</h2>
 						<p>The Service Overview feature shows a breakdown of all events that have been loaded into the application grouped by AWS Service.</p>
                         <p>Clicking any of the services exposes a Table view where all the features described above are available.</p>
+                        <p>Find out more about <a href="serviceoverview.html">Service Overview</a></p>
 					</div>
 				</div>
 			</div>
@@ -114,6 +135,7 @@
 						<h2 class="text-uppercase">User Overview</h2>
 						<p>The User Overview feature breaks the loaded Events down into actions performed by IAM Users.</p>
                         <p>Clicking any of the Users exposes a Table view where all the features described above are available.</p>
+                        <p>Find out more about <a href="useroverview.html">User Overview</a></p>
 					</div>
 				</div>
 			</div>
