Fixed Icon layout problem

--- a/tableview.html
+++ b/tableview.html
@@ -1,181 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- 
-        Boxer Template
-        http://www.templatemo.com/preview/templatemo_446_boxer
-        -->
-        <meta charset="utf-8">
-        <title>CloudTrail Viewer :: Table View</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="keywords" content="">
-        <meta name="description" content="">
+<head>
+    <!--
+    Boxer Template
+    http://www.templatemo.com/preview/templatemo_446_boxer
+    -->
+    <meta charset="utf-8">
+    <title>CloudTrail Viewer :: Table View</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
 
-        <!-- animate css -->
-        <link rel="stylesheet" href="css/animate.min.css">
-        <!-- bootstrap css -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <!-- font-awesome -->
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <!-- google font -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700,800' rel='stylesheet' type='text/css'>
+    <!-- animate css -->
+    <link rel="stylesheet" href="css/animate.min.css">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- google font -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700,800' rel='stylesheet' type='text/css'>
 
-        <!-- custom css -->
-        <link rel="stylesheet" href="css/templatemo-style.css">
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/templatemo-style.css">
 
-    </head>
-    <body>
-        <div id="developer"></div>
+</head>
+<body>
+<div id="developer"></div>
 
-        <!-- start navigation -->
-        <nav class="navbar navbar-default navbar-fixed-top templatemo-nav" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon icon-bar"></span>
-                        <span class="icon icon-bar"></span>
-                        <span class="icon icon-bar"></span>
-                    </button>
-                    <a id="homepage" href="index.html" class="navbar-brand">CloudTrail Viewer</a>
+<!-- start navigation -->
+<nav class="navbar navbar-default navbar-fixed-top templatemo-nav" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon icon-bar"></span>
+                <span class="icon icon-bar"></span>
+                <span class="icon icon-bar"></span>
+            </button>
+            <a id="homepage" href="index.html" class="navbar-brand">CloudTrail Viewer</a>
+        </div>
+    </div>
+</nav>
+<!-- end navigation -->
+
+<!-- start home -->
+<section id="home">
+    <div class="overlay">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <h1 class="text-upper">Table View</h1>
+
+                    <p class="tm-white">See the events in the order they occurred</p>
                 </div>
+                <div class="col-md-1"></div>
             </div>
-        </nav>
-        <!-- end navigation -->
+        </div>
+    </div>
+</section>
+<!-- end home -->
 
-        <!-- start home -->
-        <section id="home">
-            <div class="overlay">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-1"></div>
-                        <div class="col-md-10">
-                            <h1 class="text-upper">Table View</h1>
-                            <p class="tm-white">See the events in the order they occurred</p>                            
-                        </div>
-                        <div class="col-md-1"></div>
-                    </div>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+
+                <h4>Table View</h4>
+
+                <p style="text-align: left">
+                    The Table View is one of primary features of CloudTrial Viewer, it is the place you can see the events
+                    that have been loaded, inspect individual events, filter the events and view charts based on the loaded events.
+                </p>
+
+                <p>
+                    The majority of the screens provide a Table View aspect allowing you to see a drilled down representation
+                    of the loaded events, for example on the Service Overview screen you can click a service and the table
+                    only shows the events for that service.
+                </p>
+
+                <p>Clicking on the Table header you are able to select the columns that you wish to see, and hide those that you don't.</p>
+
+                <p>
+                    The Simple Table View screen consists of a Table view that shows all the events that have been loaded.
+                </p>
+                <hr/>
+
+                <h4 class="media-heading">Export Table</h4>
+
+                <div>
+                    <img style="float:left; margin-right: 10px;" src="images/tableview/CSV-Export-48.png" alt="Export table">
+                    Above the table to the right of the filter bar is the Export Table button. This feature allows the contents
+                    of the table to be save as a CSV formatted file. <em>Only the visible columns will be save.</em>
                 </div>
+
             </div>
-        </section>
-        <!-- end home -->
+            <div class="col-md-1"></div>
+        </div>
+    </div>
+</section>
+<hr/>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
 
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-1"></div>
-                    <div class="col-md-10">
+                <h4>Side Bar</h4>
 
-                        <h4>Table View</h4>
-                        <p style="text-align: left">
-                            The Table View is one of primary features of CloudTrial Viewer, it is the place you can see the events
-                            that have been loaded, inspect individual events, filter the events and view charts based on the loaded events.
-                        </p>
-                        <p>
-                            The majority of the screens provide a Table View aspect allowing you to see a drilled down representation
-                            of the loaded events, for example on the Service Overview screen you can click a service and the table 
-                            only shows the events for that service. 
-                        </p>
+                <p style="text-align: left">
+                    Part of the Table View is the Side bar. This area provides more information about the events loaded and individual
+                    events selected.
+                </p>
+                <h4 class="media-heading">Save</h4>
 
-                        <p>Clicking on the Table header you are able to select the columns that you wish to see, and hide those that you don't.</p>
-
-                        <p>
-                            The Simple Table View screen consists of a Table view that shows all the events that have been loaded.
-                        </p>
-                        <hr/>
-                        <div class="media">
-                            <div class="media-left">
-                                <img class="media-object" src="images/tableview/CSV-Export-48.png" alt="Save">
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Export Table</h4>
-                                Above the table to the right of the filter bar is the Export Table button. This feature allows the contents
-                                of the table to be save as a CSV formatted file. <em>Only the visible columns will be save.</em>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-md-1"></div>
+                <div>
+                    <img style="float:left; margin-right: 10px;" class="media-object" src="images/tableview/Save-48.png" alt="Save">
+                    The save button will create an image of the currently selected side bar function opening a Save Dialog so you can
+                    choose where to save it too. The image created will be a .PNG file.
                 </div>
-            </div>
-        </section>
-        <hr/>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-1"></div>
-                    <div class="col-md-10">
+                <hr/>
+                <h4 class="media-heading">Event JSON</h4>
 
-                        <h4>Side Bar</h4>
-                        <p style="text-align: left">
-                            Part of the Table View is the Side bar. This area provides more information about the events loaded and individual
-                            events selected.
-                        </p>     
-                        <div class="media">
-                            <div class="media-left">
-                                <img class="media-object" src="images/tableview/Save-48.png" alt="Save">
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Save</h4>
-                                The save button will create an image of the currently selected side bar function opening a Save Dialog so you can
-                                choose where to save it too. The image created will be a .PNG file.
-                            </div>
-                        </div>
-                        <hr/>
-                        <div class="media">
-                            <div class="media-left">
-                                <img class="media-object" src="images/tableview/Braces-48.png" alt="Save">
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Event JSON</h4>
-                                Sometime the information your need to look at doesn't fit well into a table format. Clicking any row in the table will
-                                open the side bar (if not already visible) and present the original JSON that formed the CloudTrail Event.
-                            </div>
-                        </div>
-                        <hr/>
-                        <div class="media">
-                            <div class="media-left">
-                                <img class="media-object" src="images/tableview/Tree-48.png" alt="Save">
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Event Tree</h4>
-                                This feature shows a tree representation of the Event.
-                            </div>
-                        </div>
-                        <hr/>
-                        <div class="media">
-                            <div class="media-left">
-                                <img class="media-object" src="images/tableview/Pie-Chart-48.png" alt="Save">
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Chart Stats</h4>
-                                The Chart Stats feature shows all the events contained in the table as a chart. This chart can show either the
-                                Top 5 or Top 10 events that match a criteria. You change the criteria by selecting from the Source menu what Event
-                                parameter you want too see. You can change the type of chart, it's orientation. Below the Chart is a key showing the
-                                data represented in the chart.
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-md-1"></div>
+                <div>
+                    <img style="float:left; margin-right: 10px;" class="media-object" src="images/tableview/Braces-48.png" alt="Event JSON">
+                    Sometime the information your need to look at doesn't fit well into a table format. Clicking any row in the table will
+                    open the side bar (if not already visible) and present the original JSON that formed the CloudTrail Event.
                 </div>
-            </div>
-        </section>
+                <hr/>
+                <h4 class="media-heading">Event Tree</h4>
 
-
-        <!-- start footer -->
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <p>Copyright © 2015 Mark P. Haskins</p>
+                <div>
+                    <img style="float:left; margin-right: 10px;" class="media-object" src="images/tableview/Tree-48.png" alt="Event Tree">
+                    This feature shows a tree representation of the Event.
                 </div>
+                <hr/>
+                <h4 class="media-heading">Chart Stats</h4>
+
+                <div>
+                    <img style="float:left; margin-right: 10px;" class="media-object" src="images/tableview/Pie-Chart-48.png" alt="Stats">
+                    The Chart Stats feature shows all the events contained in the table as a chart. This chart can show either the
+                    Top 5 or Top 10 events that match a criteria. You change the criteria by selecting from the Source menu what Event
+                    parameter you want too see. You can change the type of chart, it's orientation. Below the Chart is a key showing the
+                    data represented in the chart.
+                </div>
+
             </div>
-        </footer>
-        <!-- end footer -->
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/wow.min.js"></script>
-        <script src="js/jquery.singlePageNav.min.js"></script>
-        <script src="js/custom.js"></script>
-    </body>
+            <div class="col-md-1"></div>
+        </div>
+    </div>
+</section>
+
+
+<!-- start footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+            <p>Copyright © 2015 Mark P. Haskins</p>
+        </div>
+    </div>
+</footer>
+<!-- end footer -->
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/wow.min.js"></script>
+<script src="js/jquery.singlePageNav.min.js"></script>
+<script src="js/custom.js"></script>
+</body>
 </html>
