Updating the web site for version 2.3 of the application

--- a/developer.html
+++ b/developer.html
@@ -83,14 +83,15 @@
                         
                         <h3>Artifacts</h3>
                         <p style="text-align: left">
-                            Currently the Maven build process creates two artificats:
+                            Currently the Maven build process creates the following artificats:
                         </p>
                         <ul>
                             <li>OS X Application (.app)</li>
                             <li>Windows Application (.exe)</li>
+                            <li>An executable Jar</li>
                         </ul>
                         <p style="text-align: left">
-                            Neither of these are signed in any shape or form so end users might have problems running them if they are not aware of the commands to run
+                            None of these are signed in any shape or form so end users might have problems running them if they are not aware of the commands to run
                             unsigned applications.
                         </p>
                         
